* infoboxes
  - green InfoBox distance when inside observation zone (#2560)
  - limit the InfoBox aspect ratio
  - new InfoBox styles "Shaded" (#1852), "Glass" (#2466)
  - waypoint details button in target dialog (#1967)
  - show distance in radial InfoBox comment (#2577)
  - new InfoBox "ATC radial" with distance in nautical miles (#2269, #2706)
* user interface
  - replay fast-forward
  - new waypoint location editor (#343)
  - show required glide ratio in waypoint details (#1573)
  - add airspace ack button to map item list (#2139)
  - additionally show airspace altitude in feet (#2379)
  - show more files in replay file picker (#2582)
  - clicking with Ctrl key pressed moves the simulator (#199)
  - vario bar at the right edge of the map
* tasks
  - MAT tasks (#563)
  - custom symmetric quadrant (#2125)
  - AAT keyhole (#1687)
  - add AST point option "Score exit" (#2544)
  - optimise start point
  - allow up to 30 turn points in racing tasks
  - local time for task start open/close time (#2645)
  - enforce the task start open/close time (#2678)
  - fix start auto-advance
* calculations
  - improve the circling wind algorithm (#2690)
* devices
  - Volkslogger: support IGC file download (#1972)
  - Volkslogger: declaration no longer erases waypoint database from logger
  - CAI302: support uploading all waypoint file types (#2054)
  - V7: support for QNH synchronization to V7 vario
* Android
  - faster map renderer on some Android devices
* other
  - new polars for two G 102 Astir variants (#2701)
  - new option "auto bugs" increases bug setting every hour (#1526)
* configuration
  - fix saving of configuration values in non-metric setups (#2771)

Version 6.5.4 - 2013/04/10
* devices
  - Volkslogger: increase timeout for reading flight list
  - V7: fix QNH change
* logger
  - fix failing IGC logger (#2658, #2735, #2736, #2746, #2751)

Version 6.5.3 - 2013/03/26
* user interface
  - eliminate flickering in the cross section on Windows